--- a/WebApiProject/appsettings.json
+++ b/WebApiProject/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "StudyDB": "Data Source=(local);Initial Catalog=StudyDB;Integrated Security=True;Trust Server Certificate=True"
+  }
 }
