--- a/WebApiProject/Properties/launchSettings.json
+++ b/WebApiProject/Properties/launchSettings.json
@@ -6,7 +6,17 @@
       "dotnetRunMessages": true,
       "launchBrowser": false,
       "launchUrl": "web/person",
-      "applicationUrl": "http://localhost:5019",
+      "applicationUrl": "http://localhost:5018",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
+    "https": {
+      "commandName": "Project",
+      "dotnetRunMessages": true,
+      "launchBrowser": false,
+      "launchUrl": "web/person",
+      "applicationUrl": "https://localhost:5019;http://localhost:5018",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
