using JWT generate access_token

--- a/WebApiProject/appsettings.json
+++ b/WebApiProject/appsettings.json
@@ -8,5 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "StudyDB": "Data Source=(local);Initial Catalog=StudyDB;Integrated Security=True;Trust Server Certificate=True"
-  }
+  },
+  "SecurityKey": "kkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkk"
 }
