--- a/WebApiProject/appsettings.json
+++ b/WebApiProject/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "StudyDB": "Data Source=(local);Initial Catalog=StudyDB;Integrated Security=True;Trust Server Certificate=True"
+    "WebApi": "Data Source=(local);Initial Catalog=WebApi;Integrated Security=True;Trust Server Certificate=True"
   },
   "SecurityKey": "kkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkk"
 }
